syntax = "proto3";

package ru.bodrov.mitap.client.grpc;

option java_package = "ru.bodrov.mitap.demo.grpc";
option java_multiple_files = true;

message Client {
  int32 id = 1;
  string clientName = 2;
  string dateAdd = 3;
  repeated int32 productId = 4;
}

message ClientsRequest {
}

message ClientsResponse {
  repeated Client client = 1;
}

service ClientService {
  rpc GetAllClients(ClientsRequest) returns (ClientsResponse);
}